fix(UI defects): fix button text overflow issue

--- a/crowdsource-ui/src/views/modules/parallel/validation/validator-prompt.css
+++ b/crowdsource-ui/src/views/modules/parallel/validation/validator-prompt.css
@@ -138,6 +138,11 @@ a{
   .record-btn-container .test-mic-speaker {
     margin-top: 15px;
   }
+
+  #cancel-edit-button , #submit-edit-button, #need_change{
+    width:max-content;
+  }
+
   #cancel-edit-button > svg {
     height: 80px;
     width: 160px;
